# thinker

./: .gitignore  Cargo.toml  thinker.sublime-project
assets/: index.html  style.css
assets/flow/: api.js  container.js  drag.js  index.js  render_step.js  send_message.js  style.css  wait_for_reply.js
bash/: build.sh  deploy.sh  log.sh  restart.sh
sql/: db.sql
src/: appconfig.rs  logged_user.rs  main.rs  models.rs
src/admin/: login.rs  mod.rs  user.rs
src/api/: mod.rs
src/api/flow/: list.rs  mod.rs  send_message.rs  step_list.rs  wait_for_reply.rs
src/api/webhook/: instagram.rs  mod.rs  whatsapp.rs
src/app/: login.rs  mod.rs
src/app/automotion/: mod.rs
src/app/channel/: mod.rs
src/app/flow/: mod.rs
src/app/inbox/: chat.rs  contact_list.rs  mod.rs
src/app/setting/: mod.rs
src/app/social/: mod.rs
src/app/templete_message/: mod.rs
src/service/: channel.rs  flow.rs  mod.rs
src/storage/: mod.rs
src/task/: mod.rs
templates/: automotion.html  channel.html  layout.html  login.html  template_message.html
templates/admin/: create_user.html  edit_user.html  layout.html  list_user.html  login.html
templates/flow/: main.html
templates/flow/step/: ask_question.html  base.html  empty.html  send_message.html
templates/inbox/: chat.html  contact_list.html  main.html  message_list.html
